--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha ",
-    "build": "npm install"
+    "build": "npm install",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
